[package]
name = "parse-page"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0.71"
article_scraper = "2.0.0-alpha.0"
headless_chrome = "1.0.5"
poppler = "0.3.2"
reqwest = {version = "0.11.17", features = [
    "json",
    "native-tls",
    "gzip",
    "brotli",
    "stream",
]}
tokio = { version = "1.27", features = [
    "macros",
    "fs",
    "io-util","rt-multi-thread"] }
url = "2.3"
